--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-vue": "^8.0.3"
   },
   "eslintConfig": {
+    "rules": {"vue/multi-word-component-names": "off"},
     "root": true,
     "env": {
       "node": true
