--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "vue",
   "version": "0.1.0",
+  "homepage": "https://konstantin-kotenko.github.io/vue/",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "github": "gh-pages -d dist"
   },
   "dependencies": {
     "core-js": "^3.8.3",
