--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "name": "vue",
   "version": "0.1.0",
-  "homepage": "https://konstantin-kotenko.github.io/vue/",
-  "private": true,
+  "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "github": "gh-pages -d dist"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^3.8.3",
